# wgsd-ucode

./: .bumpversion.cfg  LICENSE  README.md
coredns/: Config.in  Makefile
prometheus-node-exporter-ucode-amneziawg/: Makefile
prometheus-node-exporter-ucode-amneziawg/files/extra/: amneziawg.uc
rpcd-mod-amneziawg/: Makefile
rpcd-mod-amneziawg/src/: CMakeLists.txt  api.c  wireguard.c
ucode-mod-base32/: Makefile
ucode-mod-base32/src/: base32.c  ucode_adapter.c
wgsd-client-ucode/: Makefile
wgsd-client-ucode/files/: client.uc  wgsd-client-ucode.sh
wgsd-registry/: Makefile
wgsd-registry/files/: wgsd-registry.conf  wgsd-registry.init  wgsd-registry.sh  zone.uc
